fix: Add volume as env-file
Signed-off-by: James Gregg <james.r.gregg@intel.com>

--- a/servas-app/templates/servas-deployment.yaml
+++ b/servas-app/templates/servas-deployment.yaml
@@ -42,4 +42,8 @@ spec:
                 secretKeyRef:
                   name: servas-app-secrets
                   key: DB_DATABASE
+      volumes: # Add this section
+            - name: env-file
+              configMap:
+                name: servas-app-config
         
