--- a/servas-app/templates/service.yaml
+++ b/servas-app/templates/service.yaml
@@ -9,15 +9,15 @@ spec:
       targetPort: 80
   selector:
     app: servas-app
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: servas-db
-spec:
-  type: {{ .Values.dbService.type }}
-  ports:
-    - port: {{ .Values.dbService.port }}
-      targetPort: 3306
-  selector:
-    app: servas-app
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: servas-db
+# spec:
+#   type: {{ .Values.dbService.type }}
+#   ports:
+#     - port: {{ .Values.dbService.port }}
+#       targetPort: 3306
+#   selector:
+#     app: servas-app
