--- a/servas-app/templates/db-deployment.yaml
+++ b/servas-app/templates/db-deployment.yaml
@@ -13,9 +13,9 @@ spec:
       labels:
         app: mariadb
     spec:
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 3000
+      # securityContext:
+      #   runAsUser: 1000
+      #   runAsGroup: 3000
       containers:
         - name: mariadb
           image: "{{ .Values.dbImage.repository }}:{{ .Values.dbImage.tag }}"
