fix: bump db version and set root password and update configmap
Signed-off-by: James Gregg <james.r.gregg@intel.com>

--- a/servas-app/templates/configmap.yaml
+++ b/servas-app/templates/configmap.yaml
@@ -6,4 +6,5 @@ data:
   .env: |
     DB_USERNAME={{ .Values.env.DB_USERNAME }}
     DB_PASSWORD={{ .Values.env.DB_PASSWORD }}
+    DB_ROOT_PASSWORD={{ .Values.env.DB_ROOT_PASSWORD }}
     DB_DATABASE={{ .Values.env.DB_DATABASE }}
